add_executable(test_riemann_linear_single single.cpp)
set_target_properties(test_riemann_linear_single PROPERTIES OUTPUT_NAME single)
add_test(NAME TestRiemannLinearSingle COMMAND single)

add_executable(test_riemann_linear_double double.cpp)
set_target_properties(test_riemann_linear_double PROPERTIES OUTPUT_NAME double)
add_test(NAME TestRiemannLinearDouble COMMAND double)
